fix to work in React App
