# src/main/java/com/example/autenticationservice/domain/model/autentication/FirstStepLogoutRequest.java
@@ -1,0 +1,14 @@
+package com.example.autenticationservice.domain.model.autentication;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data //questo ci crea getter e setter in automatico
+@Builder(toBuilder = true) //interfaccia differente e fluida per settare parametri //tobuilder da una classe di creare il builder
+@AllArgsConstructor //costruttore con tutti i parametri
+@NoArgsConstructor //costruttore vuoto
+public class FirstStepLogoutRequest {
+    private String refreshToken;
+}
